--- a/frontend/src/styles/layout/_touch.scss
+++ b/frontend/src/styles/layout/_touch.scss
@@ -12,10 +12,13 @@
 		border: 0;
 		height: 55px;
 		padding-left: 20px;
-		font-size: 14px;
-		color: #BFBFBF;
+		font-size: 16px;
+		color: var(--clr-common-heading);
 		border-radius: 5px;
 		padding-right: 60px;
+		&::placeholder {
+			color: var(--clr-common-placeholder);
+		}
 	}
 	button {
 		position: absolute;
